*** empty log message ***

--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -5,7 +5,7 @@ Data Crow 3.9.27  [Released on May 18 2013]  [testing: high]  [target: productio
 [Fixed]
 - No ShortCut created by the installer for Windows 64bit version.
 - The log file is created initially in an incorrect location.
-- Create multiple not working for any non music track modules.
+- Create multiple not working for any non track modules.
 - Issue where images are not always imported for items part of the imported main module.
 - Container sometimes can't be saved.
 - Loan shows incorrect period in case no due date has been set.
@@ -17,8 +17,7 @@ Data Crow 3.9.27  [Released on May 18 2013]  [testing: high]  [target: productio
 [Changed]
 - I have made a lot of improvements to the help text (F1). I have added links in there,
   pointing to the detailed help text where necessary, have added a lot of additional 
-  information in general, screenshots, etc. This was 24+ hours of work, so you better 
-  read all of it! ;-)
+  information in general, etc.
 - Removed the filter operator 'Equal' and 'Not Equal To' for multi-reference fields;
   already covered with contains and does not contain.
 
