--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,7 +1,15 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.9.27  [Released on May 18 2013]  [testing: high]  [target: production]
+Data Crow 3.10  [Released on May 18 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 Thanks mrpenguin007 for the updated German translation!
+See http://sourceforge.net/projects/inventarverwalt/ for the module he has created.
+
+This release mainly focuses on the help file, which has been greatly improved.
+During the writing of the help file the discovered issues have been fixed. Small 
+improvements to the GUI have been made to improve the experience in using Data Crow.
+This is the first release since a long time having a completely up to date help.
+Note that the help is still only available in English; translators are very welcome 
+to help out.
 
 [Fixed]
 - No ShortCut created by the installer for Windows 64bit version.
@@ -15,7 +23,7 @@ Thanks mrpenguin007 for the updated German translation!
 - Resizing the settings view caused the application to crash.
 - Date operators for the filter were not correct for dates.
 - Passwords always needed to be entered in upper case after changing it. Now it
-  works correctly, case-sensitive. 
+  works correctly, case-sensitive, for NEW passwords. 
 - The horizontal setting for the Quick Fields Setting did only work when working in the
   English language.
 - Picture not shown on the Data Crow item after starting Data Crow for the very first 
@@ -35,7 +43,7 @@ Thanks mrpenguin007 for the updated German translation!
 - The Item Importer now has a setting to disable the item merging.
 - I have added a Settings menu to the property item views. From here you can make changes
   to the item form layout and adjust the field settings. This was the only part of 
-  Data Crow where you can not make modifications.
+  Data Crow where you could not make modifications.
 - Better initial settings for the item forms of the property modules.
 - Added a filter field to the property maintenance overviews.
 - Improvement made for multi-reference fields item selector
