--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,7 +1,19 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.10.1  [Released on May 23 2013]  [testing: moderate]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Image not saved when updated through an online service.
+- Saving the field settings for property modules also changes the quick view settings of
+  the currently active module
+- Table view shows the same column multiple times.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.10  [Released on May 18 2013]  [testing: high]  [target: production]
 -----------------------------------------------------------------------------------------
 Thanks mrpenguin007 for the updated German translation!
+See http://sourceforge.net/projects/inventarverwalt/ for the module he has created.
 
 This release mainly focuses on the help file, which has been greatly improved.
 During the writing of the help file the discovered issues have been fixed. Small 
@@ -22,7 +34,7 @@ to help out.
 - Resizing the settings view caused the application to crash.
 - Date operators for the filter were not correct for dates.
 - Passwords always needed to be entered in upper case after changing it. Now it
-  works correctly, case-sensitive. 
+  works correctly, case-sensitive, for NEW passwords. 
 - The horizontal setting for the Quick Fields Setting did only work when working in the
   English language.
 - Picture not shown on the Data Crow item after starting Data Crow for the very first 
@@ -42,7 +54,7 @@ to help out.
 - The Item Importer now has a setting to disable the item merging.
 - I have added a Settings menu to the property item views. From here you can make changes
   to the item form layout and adjust the field settings. This was the only part of 
-  Data Crow where you can not make modifications.
+  Data Crow where you could not make modifications.
 - Better initial settings for the item forms of the property modules.
 - Added a filter field to the property maintenance overviews.
 - Improvement made for multi-reference fields item selector
