--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,21 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.10.3  [Released on July x 2013]  [testing: moderate]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Various potential resource leaks have been discovered and fixed.
+- Potential errors in video parser have been fixed.
+- Changed the backup process to ignore any "non-DataCrow" files.
+
+[Changed]
+- Added parameter "port:" to specify the port to be used by teh web server on start up.
+
+TODO:
+- Google books: 103 instead of 1030 pages
+- Setup EXE does not detect JRE 64BIT
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.10.2  [Released on July 2 2013]  [testing: moderate]  [target: production]
 -----------------------------------------------------------------------------------------
 
