--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -16,6 +16,8 @@ Data Crow 3.10.3  [Released on July x 2013]  [testing: moderate]  [target: produ
   next runs. The option is always available from the settings menu.
 - For new users only - font size increased from 11 to 12. Note that you can change the
   font and its size yourself from within Settings > Settings > Font.
+- Newly supported file types for the file importer are now configured automatically.
+- jAudioTagger library update from 2.0 to 2.2.
 
 
 -----------------------------------------------------------------------------------------
