--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -7,7 +7,7 @@ Data Crow 3.10.3  [Released on July x 2013]  [testing: moderate]  [target: produ
 - Potential errors in video parser have been fixed.
 - Changed the backup process to ignore any "non-DataCrow" files.
 - Number of pages returned from Google Books was incorrect (103 was shown as 10).
-- Setup EXE files now available for both the 32bit and the 64bit Java version.
+- Setup executable files now available for both the 32bit and the 64bit Java version.
 - Issue with the CD reader "Executable name has embedded quote, split the arguments java" 
   has been fixed.
 
@@ -21,8 +21,18 @@ Data Crow 3.10.3  [Released on July x 2013]  [testing: moderate]  [target: produ
 - Newly supported file types for the file importer are now configured automatically.
 - jAudioTagger library update from 2.0 to 2.2.
 - Filter error when filtering on the due date from / to in the loan administration.
-
-
+- Various small improvements to the loan administration panel such as a cancel button
+  for the current search action.
+- Allow multiple items to be returned from the loan administration overview (right-click,
+  select Loan Administration).
+  
+[New]
+- iCalendar export for the loan administration (Tools > iCalendar Loan Export)
+- New online search (TheMovieDB.org). This online search supports searching for movie
+  information in multiple languages.
+- Tag words functionality has been added to all top modules. 
+  
+  
 -----------------------------------------------------------------------------------------
 Data Crow 3.10.2  [Released on July 2 2013]  [testing: moderate]  [target: production]
 -----------------------------------------------------------------------------------------
