--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -1,4 +1,20 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.11.1  [Released on August xx 2013]  [testing: moderate]  [target: production]
+-----------------------------------------------------------------------------------------
+
+[Fixed]
+- Logger not initialized error message on prompt / console.
+
+[Changed]
+- Paths for files linked to items are now handled a bit differently;
+  a) if the file is located in the Data Crow installation directory a relative filename
+     is used.
+  b) if you are using drive mappings across Windows / Linux the backslashes and slashes
+     will be corrected as well.
+  The original filename is stored unmodified(!)
+  
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.11  [Released on July 22 2013]  [testing: moderate]  [target: production]
 -----------------------------------------------------------------------------------------
 
