--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -4,6 +4,7 @@ Data Crow 3.11.1  [Released on August xx 2013]  [testing: moderate]  [target: pr
 
 [Fixed]
 - Logger not initialized error message on prompt / console.
+- File launcher fixes (for all platforms).
 
 [Changed]
 - Paths for files linked to items are now handled a bit differently;
