--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -16,6 +16,10 @@ Data Crow 3.11.1  [Released on August xx 2013]  [testing: moderate]  [target: pr
   b) if you are using drive mappings across Windows / Linux the backslashes and slashes
      will be corrected as well.
   The original filename is stored unmodified(!)
+- the user folder selector now checks for:
+  a) existing folder selected, containing files (continue y/n).
+  b) moving from one location to another (move files y/n).
+  c) root folder not allowed as a Data Crow user folder.
   
 
 -----------------------------------------------------------------------------------------
