--- a/readme/changelog.txt
+++ b/readme/changelog.txt
@@ -27,6 +27,8 @@ both the same, for as far as possible.
   This service has been disabled.
 - Help has been updated to reflect all of the above (press F1 once in a while just for
   the sake of using it).
+- The Resource Editor now has find and replace functionality.
+
 
 [Fixed]
 - On startup Data Crow tried to modify files in the installation folder, causing problems
